v2/book/content/pages/source-code/framework/classes/Hubleto/Framework/Models/Token.md

Model for storing various validation tokens. Stored in 'tokens' SQL table.

# \Hubleto\Framework\Models\Token
<table class='table-default dense'>
<tr><td>Parent class</td><td><a href="../Model">\Hubleto\Framework\Model</a></td></tr></table>


## Properties


<div class="mt-2">&nbsp;</div>
### ☍ table
```php
public string $table
```




<div class="mt-2">&nbsp;</div>
### ☍ lookupSqlValue
```php
public ?string $lookupSqlValue
```

SQL-compatible string used to render displayed value of the record when used
as a lookup.




<div class="mt-2">&nbsp;</div>
### ☍ tokenTypes
```php
public $tokenTypes
```




<div class="mt-2">&nbsp;</div>
### ☍ recordManagerClass
```php
public string $recordManagerClass
```



## Methods

### ƒ describeColumns

[Description for describeColumns]

```php
public describeColumns(): array
```


### ƒ indexes

[Description for indexes]

```php
public indexes(array $indexes = []): array
```

#### Parameters

| Parameter  | Type      | Description |
|------------|-----------|-------------|
| `$indexes` | **array** |             |


### ƒ isTokenTypeRegistered

```php
public isTokenTypeRegistered(mixed $type): mixed
```

#### Parameters

| Parameter | Type      | Description |
|-----------|-----------|-------------|
| `$type`   | **mixed** |             |


### ƒ registerTokenType

```php
public registerTokenType(mixed $type): mixed
```

#### Parameters

| Parameter | Type      | Description |
|-----------|-----------|-------------|
| `$type`   | **mixed** |             |


### ƒ generateToken

```php
public generateToken(mixed $tokenSalt, mixed $tokenType, mixed $validTo = NULL): mixed
```

#### Parameters

| Parameter    | Type      | Description |
|--------------|-----------|-------------|
| `$tokenSalt` | **mixed** |             |
| `$tokenType` | **mixed** |             |
| `$validTo`   | **mixed** |             |


### ƒ validateToken

```php
public validateToken(mixed $token): mixed
```

#### Parameters

| Parameter | Type      | Description |
|-----------|-----------|-------------|
| `$token`  | **mixed** |             |


### ƒ deleteToken

```php
public deleteToken(mixed $tokenId): mixed
```

#### Parameters

| Parameter  | Type      | Description |
|------------|-----------|-------------|
| `$tokenId` | **mixed** |             |


## Inherited methods

### ƒ __construct

```php
public __construct(): mixed
```


### ƒ setDebugLevel

[Description for setDebugLevel]

```php
public setDebugLevel(int $level): void
```

#### Parameters

| Parameter | Type    | Description |
|-----------|---------|-------------|
| `$level`  | **int** |             |


### ƒ getDebugLevel

[Description for getDebugLevel]

```php
public getDebugLevel(): int
```


### ƒ getServiceStatic

Shortcut for the dependency injection.

```php
public static getServiceStatic(string $service): mixed
```

* This method is **static**.
#### Parameters

| Parameter  | Type       | Description |
|------------|------------|-------------|
| `$service` | **string** |             |


### ƒ getService

[Description for getService]

```php
public getService(string $service): mixed
```

#### Parameters

| Parameter  | Type       | Description |
|------------|------------|-------------|
| `$service` | **string** |             |


### ƒ loader

Shortcut for the loader service.

```php
public loader(): \Hubleto\Framework\Loader
```


### ƒ env

Shortcut for the env service.

```php
public env(): \Hubleto\Framework\Env
```


### ƒ authProvider

Shortcut for the authentication service.

```php
public authProvider(): \Hubleto\Framework\Interfaces\AuthProviderInterface
```


### ƒ db

Shortcut for the database service.

```php
public db(): \Hubleto\Framework\Db
```


### ƒ appManager

Shortcut for the app manager service.

```php
public appManager(): \Hubleto\Framework\Interfaces\AppManagerInterface
```


### ƒ router

Shortcut for the router service.

```php
public router(): \Hubleto\Framework\Router
```


### ƒ eventManager

Shortcut for the event manager service.

```php
public eventManager(): \Hubleto\Framework\EventManagerInterface
```


### ƒ sessionManager

Shortcut for the session manager service.

```php
public sessionManager(): \Hubleto\Framework\SessionManager
```


### ƒ permissionsManager

Shortcut for the permissions manager service.

```php
public permissionsManager(): \Hubleto\Framework\PermissionsManager
```


### ƒ cronManager

Shortcut for the cron manager service.

```php
public cronManager(): \Hubleto\Framework\CronManager
```


### ƒ config

Shortcut for the config service.

```php
public config(): \Hubleto\Framework\Interfaces\ConfigManagerInterface
```


### ƒ terminal

Shortcut for the terminal service.

```php
public terminal(): \Hubleto\Framework\Interfaces\TerminalInterface
```


### ƒ logger

Shortcut for the logger service.

```php
public logger(): \Hubleto\Framework\Interfaces\LoggerInterface
```


### ƒ locale

Shortcut for the locale service.

```php
public locale(): \Hubleto\Framework\Interfaces\LocaleInterface
```


### ƒ renderer

Shortcut for the renderer service.

```php
public renderer(): \Hubleto\Framework\Interfaces\RendererInterface
```


### ƒ translator

Shortcut for the translator service.

```php
public translator(): \Hubleto\Framework\Interfaces\TranslatorInterface
```


### ƒ getModel

[Description for getModel]

```php
public getModel(string $model): \Hubleto\Framework\Interfaces\ModelInterface
```

#### Parameters

| Parameter | Type       | Description |
|-----------|------------|-------------|
| `$model`  | **string** |             |


### ƒ getController

[Description for getController]

```php
public getController(string $controller): \Hubleto\Framework\Controller
```

#### Parameters

| Parameter     | Type       | Description |
|---------------|------------|-------------|
| `$controller` | **string** |             |


### ƒ translate

```php
public translate(string $string, array<string,string> $vars = [], string $contextInner = ''): string
```

#### Parameters

| Parameter       | Type                     | Description |
|-----------------|--------------------------|-------------|
| `$string`       | **string**               |             |
| `$vars`         | **array<string,string>** |             |
| `$contextInner` | **string**               |             |


### ƒ initRecordManager

[Description for initRecordManager]

```php
public initRecordManager(): null|object
```


### ƒ isDatabaseConnected

[Description for isDatabaseConnected]

```php
public isDatabaseConnected(): bool
```


### ƒ getConfigFullPath

[Description for getConfigFullPath]

```php
public getConfigFullPath(string $configName): string
```

#### Parameters

| Parameter     | Type       | Description |
|---------------|------------|-------------|
| `$configName` | **string** |             |


### ƒ configAsString

Retrieves value of configuration parameter.

```php
public configAsString(string $configName): void
```

#### Parameters

| Parameter     | Type       | Description |
|---------------|------------|-------------|
| `$configName` | **string** |             |


### ƒ configAsInteger

Retrieves value of configuration parameter.

```php
public configAsInteger(string $configName): void
```

#### Parameters

| Parameter     | Type       | Description |
|---------------|------------|-------------|
| `$configName` | **string** |             |


### ƒ configAsArray

Retrieves value of configuration parameter.

```php
public configAsArray(string $configName): void
```

#### Parameters

| Parameter     | Type       | Description |
|---------------|------------|-------------|
| `$configName` | **string** |             |


### ƒ getSqlEngine

Returns the value of the sqlEngine property, which is used to specify the SQL engine for the model's table.

```php
public getSqlEngine(): array
```


### ƒ getFullTableSqlName

Returns full name of the model's SQL table

```php
public getFullTableSqlName(): string
```

#### Return Value

Full name of the model's SQL table


### ƒ migrations

Returns list of available migrations looked up from a folder. This method must be overridden by each model and
must include at least the default migration of a model.

```php
public migrations(): array
```

#### Return Value

List of available migrations

#### Throws

- [`Exception`](../../../Exception)


### ƒ getPendingMigrations

Retrieves migrations that are yet to be executed.

```php
public getPendingMigrations(\Hubleto\Framework\Enums\InstalledMigrationEnum $configKey): array
```

#### Parameters

| Parameter    | Type                                                | Description |
|--------------|-----------------------------------------------------|-------------|
| `$configKey` | **\Hubleto\Framework\Enums\InstalledMigrationEnum** |             |


### ƒ upgradeSchema

Installs tables of all pending migrations. Internally stores the latest installed migration.

```php
public upgradeSchema(): void
```

#### Throws

When an error occurred during the upgrade.
- [`DBException`](../Exceptions/DBException)


### ƒ upgradeForeignKeys

Installs indexes and foreign keys of all pending migrations. Internally stores the latest installed migration.

```php
public upgradeForeignKeys(): void
```

#### Throws

When an error occurred during the upgrade.
- [`DBException`](../Exceptions/DBException)


### ƒ hasColumn

[Description for hasColumn]

```php
public hasColumn(string $column): bool
```

#### Parameters

| Parameter | Type       | Description |
|-----------|------------|-------------|
| `$column` | **string** |             |


### ƒ getColumns

[Description for getColumns]

```php
public getColumns(): array<string,\Hubleto\Framework\Column>
```


### ƒ getColumn

[Description for getColumn]

```php
public getColumn(string $column): \Hubleto\Framework\Interfaces\ColumnInterface
```

#### Parameters

| Parameter | Type       | Description |
|-----------|------------|-------------|
| `$column` | **string** |             |


### ƒ columnNames

[Description for columnNames]

```php
public columnNames(): array
```


### ƒ indexes

[Description for indexes]

```php
public indexes(array $indexes = []): array
```

#### Parameters

| Parameter  | Type      | Description |
|------------|-----------|-------------|
| `$indexes` | **array** |             |


### ƒ indexNames

[Description for indexNames]

```php
public indexNames(): array
```


### ƒ getPermissions

Gets permissions for the given record.

```php
public getPermissions(array $record): array
```

#### Parameters

| Parameter | Type      | Description                      |
|-----------|-----------|----------------------------------|
| `$record` | **array** | Record to check permissions for. |


### ƒ describeColumns

[Description for describeColumns]

```php
public describeColumns(): array
```


### ƒ describeInput

[Description for describeInput]

```php
public describeInput(string $columnName): \Hubleto\Framework\Description\Input
```

#### Parameters

| Parameter     | Type       | Description |
|---------------|------------|-------------|
| `$columnName` | **string** |             |


### ƒ describeForm

[Description for describeForm]

```php
public describeForm(): \Hubleto\Framework\Description\Form
```


### ƒ describeTable

Returns a table description of the model.

```php
public describeTable(): \Hubleto\Framework\Description\Table
```

The descriptions contains configuration for table UI, columns and permissions.


### ƒ describeTree

Returns a tree description of the model.

```php
public describeTree(): \Hubleto\Framework\Description\Tree
```

The descriptions contains configuration for tree UI.


### ƒ convertRecordsToTree

Used to convert flat list of records into tree structure.

```php
public convertRecordsToTree(array $records, int $idParent, int $level): array
```

Suitable for models having parent-child relationship.

#### Parameters

| Parameter   | Type      | Description |
|-------------|-----------|-------------|
| `$records`  | **array** |             |
| `$idParent` | **int**   |             |
| `$level`    | **int**   |             |


### ƒ diffRecords

[Description for diffRecords]

```php
public diffRecords(array $record1, array $record2): array
```

#### Parameters

| Parameter  | Type      | Description |
|------------|-----------|-------------|
| `$record1` | **array** |             |
| `$record2` | **array** |             |


### ƒ getLookupSqlValue

[Description for getLookupSqlValue]

```php
public getLookupSqlValue(string $tableAlias = ''): string
```

#### Parameters

| Parameter     | Type       | Description |
|---------------|------------|-------------|
| `$tableAlias` | **string** |             |


### ƒ getLookupValue

[Description for getLookupValue]

```php
public getLookupValue(array $dataRaw): string
```

#### Parameters

| Parameter  | Type      | Description |
|------------|-----------|-------------|
| `$dataRaw` | **array** |             |


### ƒ getLookupDetails

[Description for getLookupDetailValue]

```php
public getLookupDetails(array $dataRaw): string
```

#### Parameters

| Parameter  | Type      | Description |
|------------|-----------|-------------|
| `$dataRaw` | **array** |             |


### ƒ getRecordDetailUrl

[Description for getRecordDetailUrl]

```php
public getRecordDetailUrl(array $record): string
```

#### Parameters

| Parameter | Type      | Description |
|-----------|-----------|-------------|
| `$record` | **array** |             |


### ƒ getMaxReadLevelForLoadTableData

Returns maxReadLevel value used in loadTableData() method.

```php
public getMaxReadLevelForLoadTableData(): int
```

By default is set to 0 to save bandwidth when loading data.
Override this method in your model if you need to load more details.


### ƒ getRelationsIncludedInLoadTableData

Returns list of relations to be included when loading table data.

```php
public getRelationsIncludedInLoadTableData(): array
```

By default, empty array is returned, which means no relations are included.
Override this method in your model if you need to specify particular relations.


### ƒ getMaxReadLevelForLoadFormData

Returns maxReadLevel value used in loadFormData() method.

```php
public getMaxReadLevelForLoadFormData(): int
```

By default is set to 0 to save bandwidth when loading data.
Override this method in your model if you need to load more details.


### ƒ getRelationsIncludedInLoadFormData

Returns list of relations to be included when loading form data.

```php
public getRelationsIncludedInLoadFormData(): array
```

By default, empty array is returned, which means no relations are included.
Override this method in your model if you need to specify particular relations.


### ƒ encryptPassword

Used to encrypt passowrd to store it securely.

```php
public encryptPassword(string $original): string
```

#### Parameters

| Parameter   | Type       | Description |
|-------------|------------|-------------|
| `$original` | **string** |             |


### ƒ onBeforeValidate

onBeforeValidate

```php
public onBeforeValidate(array<string,mixed> $record): array<string,mixed>
```

#### Parameters

| Parameter | Type                    | Description |
|-----------|-------------------------|-------------|
| `$record` | **array<string,mixed>** |             |

#### Throws

- [`RecordSaveException`](../Exceptions/RecordSaveException)


### ƒ onAfterValidate

onBeforeValidate

```php
public onAfterValidate(array<string,mixed> $record): array<string,mixed>
```

#### Parameters

| Parameter | Type                    | Description |
|-----------|-------------------------|-------------|
| `$record` | **array<string,mixed>** |             |

#### Throws

- [`RecordSaveException`](../Exceptions/RecordSaveException)


### ƒ onBeforeCreate

onBeforeCreate

```php
public onBeforeCreate(array<string,mixed> $record): array<string,mixed>
```

#### Parameters

| Parameter | Type                    | Description |
|-----------|-------------------------|-------------|
| `$record` | **array<string,mixed>** |             |

#### Throws

- [`RecordSaveException`](../Exceptions/RecordSaveException)


### ƒ onBeforeUpdate

onBeforeUpdate

```php
public onBeforeUpdate(array<string,mixed> $record): array<string,mixed>
```

#### Parameters

| Parameter | Type                    | Description |
|-----------|-------------------------|-------------|
| `$record` | **array<string,mixed>** |             |


### ƒ onBeforeDelete

onBeforeDelete

```php
public onBeforeDelete(int $id): int
```

#### Parameters

| Parameter | Type    | Description |
|-----------|---------|-------------|
| `$id`     | **int** |             |


### ƒ onAfterCreate

onAfterCreate

```php
public onAfterCreate(array<string,mixed> $savedRecord): array<string,mixed>
```

#### Parameters

| Parameter      | Type                    | Description |
|----------------|-------------------------|-------------|
| `$savedRecord` | **array<string,mixed>** |             |


### ƒ onAfterUpdate

onAfterUpdate

```php
public onAfterUpdate(array<string,mixed> $originalRecord, array<string,mixed> $savedRecord): array<string,mixed>
```

#### Parameters

| Parameter         | Type                    | Description |
|-------------------|-------------------------|-------------|
| `$originalRecord` | **array<string,mixed>** |             |
| `$savedRecord`    | **array<string,mixed>** |             |


### ƒ onAfterDelete

onAfterDelete

```php
public onAfterDelete(int $id): int
```

#### Parameters

| Parameter | Type    | Description |
|-----------|---------|-------------|
| `$id`     | **int** |             |


### ƒ onAfterLoadRecord

[Description for onAfterLoadRecord]

```php
public onAfterLoadRecord(array $record): array
```

#### Parameters

| Parameter | Type      | Description |
|-----------|-----------|-------------|
| `$record` | **array** |             |


### ƒ onAfterLoadRecords

[Description for onAfterLoadRecords]

```php
public onAfterLoadRecords(array $records): array
```

#### Parameters

| Parameter  | Type      | Description |
|------------|-----------|-------------|
| `$records` | **array** |             |

